# dotenvhub

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  todo.md
.github/workflows/: ci.yml
docs/: conf.py  index.md
images/: demo.tape
src/dotenvhub/: app.py  cli_parser.py  config.py  constants.py  skeleton.py  tui.py  utils.py
src/dotenvhub/assets/: modal_save.css  modal_save.tcss  modal_shell.css  tui.css  tui.tcss
src/dotenvhub/widgets/: filepanel.py  interactionpanel.py  modals.py  previewpanel.py
tests/: conftest.py  test_skeleton.py  test_utils.py
tests/app_tests/: test_filepanel.py  test_jumper_integration.py
