[project]
name = "dotenvhub"
version = "0.6.1"
description = "Terminal App to manage .env files written in Python powered by Textual"
readme = "README.md"
authors = [
    { name = "Zaloog", email = "gramslars@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "platformdirs>=4.3.6",
    "pyperclip>=1.9.0",
    "textual>=6.0.0",
    "textual-jumper>=0.2.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/Zaloog/dotenvhub"
Changelog = "https://github.com/Zaloog/dotenvhub/blob/main/CHANGELOG.md"

[project.scripts]
dot = "dotenvhub.app:run"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov src/dotenvhub --cov-report term-missing --verbose --color=yes"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "textual-dev>=1.7.0",
    "pytest-asyncio>=0.25.0",
]
